<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[0]"
            android:id="@+id/imageView" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:contentDescription="@string/image_description"
            android:src="@drawable/photo_cv"/>
    <TextView
            android:text="@string/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="24dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/track"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:id="@+id/textView3" android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@+id/divider" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView22" android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView21"/>
    <TextView
            android:text="@string/slack_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21" android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18" android:layout_marginTop="32dp"
    />
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" android:layout_marginTop="32dp"
    />
    <TextView
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="16dp"
    />
    <TextView
            android:text="@string/my_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:textSize="@dimen/_15ssp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView22" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.493" app:layout_constraintTop_toTopOf="@+id/textView22"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"/>
    <TextView
            android:text="@string/my_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView23" android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toEndOf="@+id/textView18" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/textView18"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView25" android:textSize="@dimen/_15ssp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/my_slack"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textView21"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"/>
    <TextView
            android:text="@string/algeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView24" android:textSize="@dimen/_15ssp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="156dp"
            app:layout_constraintStart_toEndOf="@+id/textView20" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.442" app:layout_constraintTop_toTopOf="@+id/textView20"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"/>
    <TextView
            android:text="@string/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:textSize="@dimen/_15ssp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="156dp" app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.538"/>
</androidx.constraintlayout.widget.ConstraintLayout>