<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:textSize="@dimen/_32ssp" android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/aboutBtn"/>
    <Button
            android:text="@string/my_profile"
            android:layout_width="133dp"
            android:layout_height="43dp" android:id="@+id/profileBtn"
            app:layout_constraintEnd_toEndOf="@+id/aboutBtn"
            app:layout_constraintStart_toStartOf="@+id/aboutBtn"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/aboutBtn"
            app:layout_constraintHorizontal_bias="0.465"
            android:background="#FFAF30" android:textSize="18sp"/>
    <Button
            android:text="@string/about_alc"
            android:layout_width="133dp"
            android:layout_height="46dp" android:id="@+id/aboutBtn"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="#FFAF30" android:textSize="18sp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/profileBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>